--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "method-override": "^3.0.0",
     "mysql2": "^3.9.1"
   },
   "devDependencies": {
